<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ButtonsBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Сохр" />

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Очист" />

                <Button
                    android:id="@+id/buttonLoad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Загр" />

                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Удал" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/CharParamBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/characterImage"
                        android:layout_width="match_parent"
                        android:layout_height="198dp"
                        android:layout_weight="1"
                        android:onClick="chooseImage"
                        android:src="@drawable/personicon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/textName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:hint="Имя"
                            android:textSize="10dp" />

                        <EditText
                            android:id="@+id/textRace"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:hint="Раса"
                            android:textSize="10dp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="2">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:hint="Магичность"
                                android:textColor="@color/black"
                                android:textSize="10dp" />
                        <CheckBox
                            android:id="@+id/textMagichnost"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:text="@string/coloumTitleParam"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/mightText"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/reactionText"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/mentalMightText"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/concentrationText"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/charisnText"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/massiveText"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:text="@string/coloumTitleNominal"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/MightNom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/ReactionNom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/MentalMightNom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/ConcentrationNom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/CharismNom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/MassiveNom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:text="@string/coloumTitleTekushee"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/MightTek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/ReactionTek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/MentalMightTek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/ConcentrationTek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/CharismTek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/MassiveTek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="0"
                        android:textSize="18dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/DiceRollBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textDicethrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="Результат"
                    android:textSize="50dp"/>

                <Button
                    android:id="@+id/buttonDiceThrow"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_weight="1"
                    android:onClick="ThrowDice"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="Кинуть кости" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>



